kubernetes/apps/default/misc-ingress/app/home-assistantpi4-ingress.yaml
---
# Copied from Lildrunksmurf
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistantpi4
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: home-assistant.png
    gethomepage.dev/name: Home-Assistant-Pi4
    gethomepage.dev/group: Home
    gethomepage.dev/href: https://home-assistantpi4.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  rules:
    - host: &host home-assistantpi4.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: home-assistantpi4
                port:
                  number: 8123
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistantpi4
subsets:
  - addresses:
      - ip: 192.168.10.22
    ports:
      - name: http
        port: 8123
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistantpi4
spec:
  ports:
    - name: http
      port: 8123
  type: ClusterIP
