kubernetes/apps/default/misc-ingress/app/nas-ingress.yaml
---
# Copied from Lildrunksmurf
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: unraid.png
    gethomepage.dev/name: Unraid
    gethomepage.dev/group: Storage
    gethomepage.dev/href: https://nas.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  rules:
    - host: &host nas.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nas
                port:
                  number: 5000
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
subsets:
  - addresses:
      - ip: 192.168.10.15
    ports:
      - name: http
        port: 5000
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  ports:
    - name: http
      port: 5000
  type: ClusterIP
