kubernetes/apps/default/misc-ingress/app/syn-minio-ingress.yaml
---
# Copied from Lildrunksmurf
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syn-minio-ingress
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: mdi:nas
    gethomepage.dev/name: Syn-Minio
    gethomepage.dev/group: Home
    gethomepage.dev/href: https://syn-minio.${SECRET_DOMAIN}
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:nas
    hajimari.io/group: Home
    hajimari.io/url: https://syn-minio.${SECRET_DOMAIN}
#    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  rules:
    - host: &host syn-minio.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: syn-minio
                port:
                  number: 8123
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: syn-minio-ingress
subsets:
  - addresses:
      - ip: 192.168.10.198
    ports:
      - name: http
        port: 9001
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: syn-minio-ingress
spec:
  ports:
    - name: http
      port: 9001
  type: ClusterIP
